# ridelines-drivetrain

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  env.example
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  build-layer.yml  deploy.yml  infrastructure.yml  lambda.yml  tippecanoe-layer.yml
openapi/: redoc.html  ridelines-api.yaml
src/: activity_archive.rs  activity_sync.rs  cli.rs  convert.rs  download.rs  intervals_client.rs  lambda_handler.rs  lib.rs  main.rs  metrics_helper.rs  sync.rs  tile_generator.rs  tile_uploader.rs
src/activity_sync/: archive.rs  index.rs  mod.rs  sync.rs
src/auth_lambda/: jwt.rs  main.rs
src/auth_user_info_lambda/: main.rs
src/auth_verify_lambda/: main.rs
src/common/: intervals_client.rs  jwt.rs  metrics.rs  mod.rs  types.rs
src/sync_lambda/: fit_converter.rs  main.rs  sync_status.rs  tile_generator.rs
src/sync_lambda/activity_sync/: archive.rs  index.rs  mod.rs  sync.rs
src/user_lambda/: main.rs  sync.rs  user.rs  utils.rs
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
