[package]
name = "ridelines-drivetrain"
version = "0.1.0"
edition = "2024"

[lib]
name = "ridelines_drivetrain"
path = "src/lib.rs"

[[bin]]
name = "sync_lambda"
path = "src/sync_lambda/main.rs"

[dependencies]
reqwest = { version = "0.12.28", features = ["rustls-tls"], default-features = false }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
futures = "0.3.31"
base64 = "0.22.1"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", default-features = false, features = ["json", "env-filter", "fmt"] }
geojson = "0.24"
geo = "0.32.0"
fitparser = "0.10.0"
aws_lambda_events = { version = "1.0.1", default-features = false, features = ["eventbridge", "apigw", "sqs"] }
lambda_runtime = "0.14.4"
aws-sdk-s3 = { version = "1.107", default-features = false, features = ["rustls"] }
aws-sdk-dynamodb = { version = "1.94", default-features = false, features = ["rustls"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-config = { version = "1.8", default-features = false, features = ["rustls", "rt-tokio"] }
function-timer = "0.9.2"
metrics = "0.24.3"
metrics_cloudwatch_embedded = "0.8.0"
bincode = "2.0"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"], default-features = false }
anyhow = "1.0"
tempdir = "0.3"
http = "1.4"
urlencoding = "2.1"
uuid = { version = "1.19", features = ["v4", "serde"] }
rand = "0.9"
sha2 = "0.10"
clerk-rs = "0.4.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
